force-app/main/default/objects/Case/fields/Case_Resolution_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolution_Category__c</fullName>
    <label>Case Resolution Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Selection Issue</fullName>
            </value>
            <value>
                <fullName>Vendor Issue</fullName>
            </value>
            <value>
                <fullName>Installation Issue</fullName>
            </value>
            <value>
                <fullName>Louisville Tile Error</fullName>
            </value>
            <value>
                <fullName>Non-Issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>