force-app/main/default/objects/Case/fields/Case_Resolution_Details__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolution_Details__c</fullName>
    <label>Case Resolution Details</label>
    <type>TextArea</type>
</CustomField>