force-app/main/default/objects/Case/fields/CaseSafe_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>CaseSafe_Case_ID__c</fullName>
    <formula>CaseSafeID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseSafe Case ID</label>
    <type>Text</type>
</CustomField>