force-app/main/default/objects/Case/fields/Duration_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Duration_Hrs__c</fullName>
    <formula>(NOW()-CreatedDate)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (Hrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>