force-app/main/default/objects/Case/fields/Initial_Complaint_Category__c.field-meta.xml
<CustomField>
    <fullName>Initial_Complaint_Category__c</fullName>
    <label>Initial Complaint Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Color</fullName>
            </value>
            <value>
                <fullName>Finish</fullName>
            </value>
            <value>
                <fullName>Grout Staining</fullName>
            </value>
            <value>
                <fullName>Installation / Bonding</fullName>
            </value>
            <value>
                <fullName>LTD Warehouse Error</fullName>
            </value>
            <value>
                <fullName>Manufacturing Defect</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Size</fullName>
            </value>
            <value>
                <fullName>Vendor Warehouse Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>