force-app/main/default/objects/Case/fields/Initial_Complaint_Details__c.field-meta.xml
<CustomField>
    <fullName>Initial_Complaint_Details__c</fullName>
    <label>Initial Complaint Details</label>
    <type>TextArea</type>
</CustomField>