force-app/main/default/objects/Case/fields/Issue_Sub_Area__c.field-meta.xml
<CustomField>
    <fullName>Issue_Sub_Area__c</fullName>
    <label>Issue Sub-Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Issue_Area__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Apps</fullName>
            </value>
            <value>
                <fullName>Dancik</fullName>
            </value>
            <value>
                <fullName>Dancik Decor24</fullName>
            </value>
            <value>
                <fullName>Dancik RADAR</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>iPad</fullName>
            </value>
            <value>
                <fullName>iPhone</fullName>
            </value>
            <value>
                <fullName>iTunes / iTunes sync</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>McGraw-Hill / Dodge</fullName>
            </value>
            <value>
                <fullName>Network Connectivity</fullName>
            </value>
            <value>
                <fullName>Outlook</fullName>
            </value>
            <value>
                <fullName>Outlook sync to Mobile</fullName>
            </value>
            <value>
                <fullName>Printers</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>SF to Outlook sync</fullName>
            </value>
            <value>
                <fullName>Shared Folders</fullName>
            </value>
            <value>
                <fullName>Terminal Services</fullName>
            </value>
            <value>
                <fullName>Thin Client</fullName>
            </value>
            <value>
                <fullName>Voicemail</fullName>
            </value>
            <value>
                <fullName>VPN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>