force-app/main/default/objects/Case/fields/IT_Resources__c.field-meta.xml
<CustomField>
    <fullName>IT_Resources__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IT Resources</label>
    <referenceTo>IT_Resources__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>