force-app/main/default/objects/Case/recordTypes/Internal_IT.recordType-meta.xml
<RecordType>
    <fullName>Internal_IT</fullName>
    <active>true</active>
    <businessProcess>Internal IT Case</businessProcess>
    <description>Internal IT Case</description>
    <label>Internal IT</label>
</RecordType>