force-app/main/default/objects/Case/recordTypes/Opportunity_Case.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Case</fullName>
    <active>true</active>
    <businessProcess>Internal IT Case</businessProcess>
    <label>Opportunity Case</label>
</RecordType>