force-app/main/default/objects/Case/validationRules/Case_Resolution_Details_will_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Resolution_Details_will_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND 
(ISPICKVAL(Status, &apos;Closed&apos;),LEN(Case_Resolution_Details__c)==0 )</errorConditionFormula>
    <errorDisplayField>Case_Resolution_Details__c</errorDisplayField>
    <errorMessage>Please Complete Case Resolution Details</errorMessage>
</ValidationRule>