force-app/main/default/objects/Case/validationRules/Resolution_Category_will_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_Category_will_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND 
(ISPICKVAL(Status, &apos;Closed&apos;), ISPICKVAL( Case_Resolution_Category__c , &apos;&apos;)
)</errorConditionFormula>
    <errorDisplayField>Case_Resolution_Category__c</errorDisplayField>
    <errorMessage>Please complete Select Case Resolution Category</errorMessage>
</ValidationRule>